--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-# GitHub Actions workflow: build PyInstaller exe using spec and publish updates with PyUpdater
+# GitHub Actions workflow: build PyInstaller exe using spec and publish to GitHub Releases
 # Trigger on version tags like v1.2.3
 name: Build and Release
 
@@ -23,18 +23,12 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pyinstaller pyupdater requests packaging
+          pip install pyinstaller
 
       - name: Build executable with PyInstaller using spec
         run: |
           # Use your .spec file for customization (e.g., icons, datas, hidden imports)
           pyinstaller Tasker.spec
-
-      - name: Generate update packages with PyUpdater
-        run: |
-          pyupdater pkg --process
-          pyupdater pkg --build
-          pyupdater pkg --sign
 
       - name: Create GitHub Release
         id: create_release
@@ -53,11 +47,3 @@ jobs:
           asset_path: dist/Tasker.exe
           asset_name: Tasker-${{ github.ref_name }}.exe
           asset_content_type: application/octet-stream
-
-      - name: Upload update manifest
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: pyu-data/updates/manifest.json
-          asset_name: update_manifest.json
-          asset_content_type: application/json
