--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,15 +20,16 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install dependencies
+      - name: Install dependencies from requirements
         run: |
           python -m pip install --upgrade pip
-          pip install pyinstaller
+          # Install all project dependencies, including PyInstaller
+          pip install -r requirements.txt
 
       - name: Build executable with PyInstaller using spec
         run: |
           # Use your .spec file for customization (e.g., icons, datas, hidden imports)
-          pyinstaller main.spec
+          pyinstaller Tasker.spec
 
       - name: Create GitHub Release
         id: create_release
