--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Build executable with PyInstaller using spec
         run: |
-          pyinstaller Tasker.spec
+          pyinstaller main.spec
 
       - name: Create GitHub Release
         id: create_release
