--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,6 @@ on:
 jobs:
   build-and-publish:
     runs-on: windows-latest
-    # Make the GITHUB_TOKEN available for release creation
-    env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
       - name: Check out repository
@@ -34,11 +31,13 @@ jobs:
 
       - name: Build executable with PyInstaller using spec
         run: |
-          pyinstaller main.spec
+          pyinstaller Tasker.spec
 
       - name: Create GitHub Release
         id: create_release
         uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref_name }}
           release_name: Release ${{ github.ref_name }}
@@ -47,6 +46,8 @@ jobs:
 
       - name: Upload executable asset
         uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: dist/Tasker.exe
