--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,17 @@
-# GitHub Actions workflow: build PyInstaller exe using spec and upload to existing GitHub Release
-# Trigger on version tags like v1.2.3
-actions:
-  permissions:
-    contents: write  # allow uploading assets
+# GitHub Actions workflow: build PyInstaller exe on manual release and upload to that GitHub Release
+# Trigger when you publish (or republish) a Release via the GitHub UI
+name: Build and Upload Release Asset
 
-name: Build and Release
+# Grant write access to release assets
+permissions:
+  contents: write
+
 on:
-  push:
-    tags:
-      - 'v*.*.*'
+  release:
+    types: [published]
+
 jobs:
-  build-and-publish:
+  build-and-upload:
     runs-on: windows-latest
     steps:
       - name: Check out repository
@@ -27,16 +28,17 @@ jobs:
           pip install -r requirements.txt
 
       - name: Build executable with PyInstaller using spec
-        run: |
-          pyinstaller Tasker.spec
+        run: pyinstaller Tasker.spec
 
-      - name: Upload executable to existing GitHub Release
+      - name: Upload executable asset to Release
         uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          # Points to the tag you set when creating the Release in the UI
+          tag_name: ${{ github.event.release.tag_name }}
+          # Upload the built exe into that Release
           files: dist/Tasker.exe
-          tag_name: ${{ github.ref_name }}
-          name: Tasker-${{ github.ref_name }}.exe
+          name: Tasker-${{ github.event.release.tag_name }}.exe
           draft: false
-          prerelease: false
+          prerelease: ${{ github.event.release.prerelease }}
