--- a/.github/workflows/tasker.yml
+++ b/.github/workflows/tasker.yml
@@ -41,6 +41,6 @@ jobs:
           tag_name: ${{ github.event.release.tag_name }}
           # Upload the built exe into that Release
           files: dist/Tasker.exe
-          name: Tasker-${{ github.event.release.tag_name }}.exe
+          name: Tasker-${{ github.event.release.tag_name }}
           draft: false
           prerelease: ${{ github.event.release.prerelease }}
