--- a/.github/workflows/tasker.yml
+++ b/.github/workflows/tasker.yml
@@ -1,8 +1,5 @@
-# GitHub Actions workflow: build PyInstaller exe on manual release and upload to that GitHub Release
-# Trigger when you publish (or republish) a Release via the GitHub UI
 name: Build and Upload Release Asset
 
-# Grant write access to release assets
 permissions:
   contents: write
 
@@ -13,34 +10,44 @@ on:
 jobs:
   build-and-upload:
     runs-on: windows-latest
+
     steps:
-      - name: Check out repository
+      - name: 📥 Check out repository
         uses: actions/checkout@v3
 
-      - name: Set up Python environment
+      - name: 🐍 Set up Python environment
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      - name: Install dependencies
+      - name: 📦 Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel
-          # Use legacy build behavior to avoid build isolation errors
           pip install --no-use-pep517 -r requirements.txt
+          pip install pyinstaller
 
-      - name: Build executable with PyInstaller using spec
+      - name: 🔍 Extract version from version.py
+        id: get_version
+        run: |
+          echo "version=$(python -c 'exec(open("version.py").read()); print(__version__)')" >> $GITHUB_ENV
+
+      - name: 🔨 Build executable with PyInstaller
         run: |
           pyinstaller Tasker.spec
 
-      - name: Upload executable asset to Release
+      - name: 📁 Rename EXE to Tasker.exe (if needed)
+        run: |
+          if not exist dist\Tasker.exe (
+            ren dist\*.exe Tasker.exe
+          )
+
+      - name: 🚀 Upload executable to GitHub Release
         uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          # Points to the tag you set when creating the Release in the UI
           tag_name: ${{ github.event.release.tag_name }}
-          # Upload the built exe into that Release
           files: dist/Tasker.exe
-          name: Tasker-${{ github.event.release.tag_name }}
+          name: Tasker-${{ env.version }}
           draft: false
           prerelease: ${{ github.event.release.prerelease }}
