--- a/.github/workflows/tasker.yml
+++ b/.github/workflows/tasker.yml
@@ -30,11 +30,13 @@ jobs:
         id: get_version
         shell: python
         run: |
-          import pathlib
+          import pathlib, os
           version_file = pathlib.Path("utils/version.py")
           scope = {}
           exec(version_file.read_text(), scope)
-          print(f"::set-env name=version::{scope['__version__']}")
+          version = scope["__version__"]
+          with open(os.environ["GITHUB_ENV"], "a") as f:
+              f.write(f"version={version}\n")
 
       - name: 🔎 Verify version matches GitHub Release tag
         run: |
@@ -43,7 +45,7 @@ jobs:
           echo "Expected tag: $expectedTag"
           echo "Actual tag:   $actualTag"
           if ($expectedTag -ne $actualTag) {
-            Write-Error "Version mismatch: version.py is $expectedTag but GitHub release tag is $actualTag"
+            Write-Error "❌ Version mismatch: version.py has $expectedTag but release tag is $actualTag"
             exit 1
           }
 
@@ -67,9 +69,9 @@ jobs:
           mkdir bundle
           Copy-Item "dist/Tasker.exe" -Destination bundle/
           Copy-Item "dist/updater.exe" -Destination bundle/
-          Compress-Archive -Path bundle/* -DestinationPath dist/tasker.zip
+          Compress-Archive -Path bundle/* -DestinationPath dist/Tasker.zip
 
-      - name: 🚀 Upload Tasker.exe to GitHub Release
+      - name: 🚀 Upload assets to GitHub Release
         uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
