--- a/.github/workflows/tasker.yml
+++ b/.github/workflows/tasker.yml
@@ -79,7 +79,7 @@ jobs:
           tag_name: ${{ github.event.release.tag_name }}
           files: |
             dist/Tasker.exe
-            dist/update_bundle.zip
+            dist/Tasker.zip
           name: Tasker-${{ env.version }}
           draft: false
           prerelease: ${{ github.event.release.prerelease }}
