refactor hotkey listener to avoid keys interacting with other windows/functions

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ __pycache__
 *.log
 Tasker.exe
 Tasker.exe.tmp
+/utils/__pycache__
+/utils/__pycache__
+utils/__pycache__/logger.cpython-310.pyc
+utils/__pycache__/version.cpython-310.pyc
+utils/__pycache__/logger.cpython-310.pyc
+*.pyc
